<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Consumption Calculator</string>
    <string name="hello">Hello world!</string>
    
    <!--  Get Reg View -->
    <string name="getRegistrationLabel">Enter Vehicle Registration</string>
	<string name="editTextRegistration">enter vehicle registration</string>
	<string name="saveRegistration">Save Registration</string>
	<!-- Main Menu View -->
	<string name="textViewMenuHeading">Main Menu</string>
	<string name="buttonAddRecord">Add Record</string>
	<string name="buttonDeleteRecord">Delete Record</string>
	<string name="buttonCalculateConsumption">Calculate Consumption</string>
	<string name="buttonEditRecord">Edit Record</string>
	<string name="detailsTextView">Details of record to add</string> 
	<!-- Add Record View -->
	<string name="addRecordTextView">Add Record</string>
	<string name="registrationNumberTextView">KR328LH</string>
	<string name="dateTextView">Date:</string>	    
	<string name="chosenDateTextView"></string>
	<string name="odometer">Odometer:</string>
	<string name="odometerHint">odometer</string>
	<string name="litres">Litres:</string>
	<string name="litresHint">litres</string>
	<string name="cost">Cost:</string>
	<string name="costHint">cost</string>
	<string name="addDateButton">Pick Date</string>
	<string name="addRecordButton">Add Record</string>
	<string name="addRecordToast">Please fill all data</string>
	<string name="addRecordOK">Record added successfully</string>
	<string name="addRecordError">Record not added. Possibly duplicate.</string>
	<!-- Search Record View -->
	<string name="searchRecordHedingTextView">Search Record</string>
	<string name="textViewDateLabel">Select date:</string>
	<string name="textViewDateDisplayHint">display date</string>
	<string name="editTextOdometerHint">odometer</string>
	<string name="TextViewSelectOdometer">Select odometer:</string>
	<string name="buttonSelectOdometer">Select odometer</string>
	<string name="noRecordFound">No records have been found</string>
	
	
</resources>